--- a/lesson_09/index.html
+++ b/lesson_09/index.html
@@ -8,6 +8,97 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div class="container">
+		<div class="row text-center">
+			<div class="col-lg-6 col-lg-offset-3">
+				<h1 class="header">
+					<span>Получите видео-инструкцию</span>
+					<strong class="text-uppercase">Как заработать свой первый миллион</strong>
+				</h1>
+			</div>
+		</div>
+
+		<div class="row center-block">
+			<div class="col-lg-6 col-lg-offset-1 col-md-8 col-xs-12">
+				<div class="video">
+				<iframe width="100%" height="310" src="https://www.youtube.com/embed/ayVLjyWqMCs" frameborder="0" allowfullscreen>
+				</iframe>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-xs-12">
+				<div class="form text-center">
+					<form action="#">
+						<p class="form-header" >Введите свой email</p>
+						<input type="text" class="form-control input-lg" placeholder="Ваше имя">
+						<input type="text" class="form-control input-lg form-input" placeholder="Ваш email">
+						<button class="btn-primary btn-lg btn-block form-btn">Получить инструкцию</button>
+					</form>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="section-header text-center text-uppercase">
+					<h2>Почему нужно сделать это сейчас?</h2>
+				</div>
+			</div>
+			<div class="features text-center">
+				<div class="col-lg-3 col-md-6 col-xs-12">
+					<img src="icons/1.png" alt="">
+					<p>Первое<br>
+				преимущество</p>
+				</div>
+				<div class="col-lg-3 col-md-6 col-xs-12">
+					<img src="icons/2.png" alt="">
+					<p>Второе<br>
+				преимущество</p>
+				</div>
+				<div class="col-lg-3 col-md-6 col-xs-12">
+					<img src="icons/3.png" alt="">
+					<p>Третье <br>
+				преимущество</p>
+				</div>
+				<div class="col-lg-3 col-md-6 col-xs-12">
+					<img src="icons/4.png" alt="">
+					<p>Четвертое<br> 
+				преимущество</p>
+				</div>
+			</div>
+		</div>
+		<div class="row text-center">
+			<div class="col-lg-12">
+					<button class="btn-primary btn-lg form-btn btn-client">Получить инструкцию</button>
+					</div>
+					
+			<div class="clients col-lg-12">
+				Наши клиенты
+			</div>
+			<div class="col-lg-3  col-md-6 col-xs-12 fotos">
+				<img class="foto" src="imgs/1.jpg" alt="Картинка 1">
+			</div>
+			<div class="col-lg-3  col-md-6 col-xs-12 fotos">
+				<img class="foto" src="imgs/2.jpg" alt="Картинка 2">
+			</div>
+			<div class="col-lg-3 col-md-6 col-xs-12 fotos">
+				<img class="foto" src="imgs/3.jpg" alt="Картинка 3">
+			</div>
+			<div class="col-lg-3 col-md-6 col-xs-12 fotos">
+				<img class="foto" src="imgs/4.jpg" alt="Картинка 4">
+			</div>
+			<div class="col-lg-3 col-md-6 col-xs-12 fotos">
+				<img class="foto" src="imgs/5.jpg" alt="Картинка 5">
+			</div>
+			<div class="col-lg-3 col-md-6 col-xs-12 fotos">
+				<img class="foto" src="imgs/6.jpg" alt="Картинка 6">
+			</div>
+			<div class="col-lg-3 col-md-6 col-xs-12 fotos">
+				<img class="foto" src="imgs/7.jpg" alt="Картинка 7">
+			</div>
+			<div class="col-lg-3 col-md-6 col-xs-12 fotos"><img class="foto" src="imgs/8.jpg" alt="Картинка 8">
+			</div>
+		</div>
+	</div>
 	
 </body>
 </html>
