--- a/lesson_06.2/index.html
+++ b/lesson_06.2/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Block</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="block">
