--- a/lesson_14.1/index.html
+++ b/lesson_14.1/index.html
@@ -24,7 +24,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
   	<link rel="stylesheet" href="css/style.css"/>
-  	<link href="https://fonts.googleapis.com/css?family=Lato|Lobster|Open+Sans&amp;subset=cyrillic" rel="stylesheet"> 
+  	<link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans&amp;subset=cyrillic" rel="stylesheet"> 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
