--- a/lesson_16.1/index.html
+++ b/lesson_16.1/index.html
@@ -16,6 +16,6 @@
 		  	<img src="imgs/8.jpg">
 		</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+	<script src="js/fotorama.js"></script>
 </body>
 </html>
