--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -142,9 +142,9 @@ $(document).ready(function(){
 	      breakpoint: 991,
 	      settings: {
 	        slidesToShow: 2,
-	        prevArrow: '<button class="prev arrow"><button>',
-	        nextArrow: '<button class="next arrow"><button>',
-	        slidesToScroll: 2
+	        slidesToScroll: 2,
+	        prevArrow: '<div class="prev arrow"></div>',
+	        nextArrow: '<div class="next arrow"><div>',
 	      }
 	    },
 	    {
@@ -152,8 +152,8 @@ $(document).ready(function(){
 	      settings: {
 	        slidesToShow: 1,
 	        slidesToScroll: 1,
-	        prevArrow: '<button class="prev arrow"><button>',
-	        nextArrow: '<button class="next arrow"><button>'
+	        prevArrow: '<div class="prev arrow"></div>',
+	        nextArrow: '<div class="next arrow"><div>'
 	      }
 	    }
 	  ]
