--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -143,8 +143,8 @@ $(document).ready(function(){
 	      settings: {
 	        slidesToShow: 2,
 	        slidesToScroll: 2,
-	        prevArrow: '<div class="prev arrow"></div>',
-	        nextArrow: '<div class="next arrow"><div>',
+	        prevArrow: '<button class="prev arrow"></button>',
+	        nextArrow: '<button class="next arrow"></button>',
 	      }
 	    },
 	    {
@@ -152,8 +152,8 @@ $(document).ready(function(){
 	      settings: {
 	        slidesToShow: 1,
 	        slidesToScroll: 1,
-	        prevArrow: '<div class="prev arrow"></div>',
-	        nextArrow: '<div class="next arrow"><div>'
+	        prevArrow: '<button class="prev arrow"></button>',
+	        nextArrow: '<button class="next arrow"></button>'
 	      }
 	    }
 	  ]
